--- a/frontend/static_html/css/common.css
+++ b/frontend/static_html/css/common.css
@@ -10,9 +10,9 @@ body {
 
 
 header{
-	background: #485563;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #29323c, #485563);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #29323c, #485563); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: #ad5389;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #3c1053, #ad5389);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #3c1053, #ad5389); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	color: white;
 	width: 100%;
 	height: 3rem;
@@ -20,7 +20,7 @@ header{
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	box-shadow: 0px 3px 5px #888888;
+	box-shadow: 0px 3px 5px #dddddd;
 	margin-bottom: 0.625rem;
 	min-width: 62.5rem;
 	position: relative;
@@ -60,7 +60,7 @@ header .left .search .search_bar{
 	padding: 0.3rem 0.9375rem;
 	outline: none;
 	border-radius: 0.25rem;
-	border: 1px solid #d1d1d1;
+	border: 1px white;
 	width: 18.75rem;
 }
 
@@ -81,9 +81,18 @@ header .right{
 	font-size: 14px;
 }
 
+header .right span{
+	cursor: pointer;
+}
+
+header .right span:hover{
+	text-decoration: underline;
+}
+
 main{
 	width: 62.5rem;
 	margin: auto;
+	min-height: 50rem;
 }
 
 footer{
