--- a/frontend/static_html/css/dashboard_common.css
+++ b/frontend/static_html/css/dashboard_common.css
@@ -45,11 +45,29 @@
 	align-items: center;
 	justify-content: left;
 	list-style: none;
-	padding: 0.9375rem 0;
+	padding: 0.875rem 0;
 	border-top: 0.0625rem #e1e1e1 dotted;
 	cursor: pointer;
 	transition: padding-left 0.3s;
 	color: #444444;
+	overflow: hidden;
+}
+
+.user-dashboard .content .left ul li span{
+	font-size: 1rem;
+	padding-left: 0.125rem;
+	min-width: 6.875rem;
+}
+
+.user-dashboard .content .left ul li div{
+	font-size: 0.875rem;
+	padding: 0 0.5rem;
+	text-align: center;
+	border-radius: 0.375rem;
+	background-color: aliceblue;
+	color: cadetblue;
+	font-weight: bold;
+	font-style: none;
 }
 
 .user-dashboard .content .left ul li:hover{
