--- a/frontend/static_html/css/common.css
+++ b/frontend/static_html/css/common.css
@@ -1,18 +1,20 @@
 html,
 body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-		width: 100%;
-		min-width: 59.375rem;
-    font-family: -apple-system, 'Open Sans', 'Helvetica Neue', sans-serif;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	width: 100%;
+	min-width: 59.375rem;
+	font-family: -apple-system, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-
-header{
-	background: #ad5389;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #3c1053, #ad5389);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #3c1053, #ad5389); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+header {
+	background: #ad5389;
+	/* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #3c1053, #ad5389);
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #3c1053, #ad5389);
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	color: white;
 	width: 100%;
 	height: 3rem;
@@ -27,14 +29,14 @@ header{
 	z-index: 10;
 }
 
-header .left{
+header .left {
 	width: 80%;
 	display: flex;
 	align-items: center;
 	flex-direction: row;
 }
 
-header .left .title{
+header .left .title {
 	margin: 0 1rem;
 	font-size: 1.25rem;
 	font-style: italic;
@@ -42,83 +44,86 @@ header .left .title{
 }
 
 
-header .left .title a{
+header .left .title a {
 	color: white;
 	text-decoration: none;
 }
 
 
-header .left .search{
+header .left .search {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	font-size: 0.875rem;
 }
 
-header .left .search .search_bar{
+header .left .search .search_bar {
 	font: inherit;
 	padding: 0.3rem 0.9375rem;
 	outline: none;
 	border-radius: 0.25rem;
 	border: 1px white;
-	width: 18.75rem;
+	width: 16rem;
 }
 
-header .left .search .search_btn{
+header .left .search .search_btn {
 	font: inherit;
 	padding: 0.25rem 0.4rem;
 	font-weight: bold;
 	border-radius: 0.25rem;
 	border: 1px solid #d1d1d1;
 	background-color: #111111;
-	margin:0 0.125rem;
+	margin: 0 0.125rem;
 	color: white;
 	cursor: pointer;
 }
 
-header .right{
+header .right {
 	padding-right: 2rem;
 	font-size: 14px;
 }
 
-header .right span{
+header .right span {
 	cursor: pointer;
 }
 
-header .right span:hover{
+header .right span:hover {
 	text-decoration: underline;
 }
 
-main{
+main {
 	width: 62.5rem;
 	margin: auto;
 	min-height: 50rem;
 }
 
-footer{
+footer {
 	width: 100%;
 	min-width: 62.5rem;
 	height: 1.25rem;
 	background-color: #f4f4f4;
-  color: #333333;
+	color: #333333;
 	margin-top: 1rem;
 	border-top: 1px #e1e1e1 solid;
 	display: flex;
 	justify-content: space-between;
 	font-size: 0.75rem;
-	background: #485563;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #29323c, #485563);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #29323c, #485563); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: #485563;
+	/* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #29323c, #485563);
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #29323c, #485563);
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	color: white;
 	padding-top: 0.3125rem;
 }
 
-footer span{
+footer span {
 	margin: 0 2rem
 }
 
 
-.btn-default{
+.btn-default {
 	padding: 0.3125rem 1rem;
 	margin-right: 0.5rem;
 	border-radius: 0.125rem;
@@ -128,30 +133,30 @@ footer span{
 	cursor: pointer;
 }
 
-.btn-default:hover{
+.btn-default:hover {
 	opacity: 0.7;
 	transition: opacity 0.3s;
 }
 
-.btn-style-orange{
+.btn-style-orange {
 	background-color: orangered;
 	border-color: orangered;
 	color: white;
 }
 
-.btn-style-green{
+.btn-style-green {
 	background-color: green;
 	border-color: green;
 	color: white;
 }
 
-.btn-style-wheat{
+.btn-style-wheat {
 	background-color: wheat;
 	border-color: navajowhite;
 	color: #444444;
 }
 
-.btn-style-white{
+.btn-style-white {
 	background-color: white;
 	border-color: green;
 	color: green;
@@ -159,48 +164,49 @@ footer span{
 
 
 
-.animation-fadein-top{
+.animation-fadein-top {
 	opacity: 0;
-	animation: fadein 0.5s;
-	-moz-animation: fadein 0.5s;
-	-webkit-animation: fadein 0.5s;
-	-o-animation: fadein 0.5s;
+	animation: fadein 0.3s;
+	-moz-animation: fadein 0.3s;
+	-webkit-animation: fadein 0.3s;
+	-o-animation: fadein 0.3s;
 	animation-fill-mode: forwards;
 	-moz-animation-fill-mode: forwards;
 	-webkit-animation-fill-mode: forwards;
 	-o-animation-fill-mode: forwards;
 }
 
-.delay_02s{
+.delay_02s {
 	animation-delay: 0.2s;
 	-moz-animation-delay: 0.2s;
 	-webkit-animation-delay: 0.2s;
 	-o-animation-delay: 0.2s;
 }
 
-.delay_04s{
+.delay_04s {
 	animation-delay: 0.4s;
 	-moz-animation-delay: 0.4s;
 	-webkit-animation-delay: 0.4s;
 	-o-animation-delay: 0.4s;
 }
 
-.delay_06s{
+.delay_06s {
 	animation-delay: 0.6s;
 	-moz-animation-delay: 0.6s;
 	-webkit-animation-delay: 0.6s;
 	-o-animation-delay: 0.6s;
 }
 
-@keyframes fadein{
-	from{
+@keyframes fadein {
+	from {
 		position: relative;
-		top: -1.875rem;
+		top: -1.25rem;
 		opacity: 0;
 	}
-	to{
+
+	to {
 		position: relative;
-		top:0;
+		top: 0;
 		opacity: 1;
 	}
 }
