--- a/frontend/static_html/css/dashboard_common.css
+++ b/frontend/static_html/css/dashboard_common.css
@@ -14,7 +14,6 @@
 
 .user-dashboard .top .title{
 	font-weight: bold;
-	font-style: italic;
 	color: #222222;
 }
 
@@ -64,8 +63,8 @@
 	padding: 0 0.5rem;
 	text-align: center;
 	border-radius: 0.375rem;
-	background-color: aliceblue;
-	color: cadetblue;
+	background-color: floralwhite;
+	color: palevioletred;
 	font-weight: bold;
 	font-style: none;
 }
@@ -85,8 +84,11 @@
 	font-weight: bold;
 	cursor: default;
 	pointer-events: none;
-	color: steelblue;
-	font-style: italic;
+	color: purple;
+	box-shadow: 0 2px 5px palevioletred;
+	border: none;
+	border-radius: 0.625rem;
+	z-index: 10;
 }
 
 
