Dashboard static html finished

--- a/frontend/static_html/css/common.css
+++ b/frontend/static_html/css/common.css
@@ -172,6 +172,12 @@ footer span {
 	color: green;
 }
 
+.btn-style-orange {
+	background-color: white;
+	border-color: orangered;
+	color: orangered;
+}
+
 
 
 .animation-fadein-top {
