Update search result page and forms

--- a/frontend/static_html/css/search.css
+++ b/frontend/static_html/css/search.css
@@ -120,6 +120,7 @@ background: linear-gradient(to bottom, #434343, #000000); /* W3C, IE 10+/ Edge, 
 
 .search-mainpage .categories-list .categories {
 	margin-top: 2rem;
+	margin-bottom: 4rem;
 }
 
 .search-mainpage .categories-list .categories ul {
