--- a/frontend/static_html/css/common.css
+++ b/frontend/static_html/css/common.css
@@ -13,6 +13,10 @@ body{
 	background-color: #444444;
 }
 
+button,input,select{
+	outline: none;
+}
+
 .root{
 	background-color: white;
 	box-shadow: 0px 2px 5px black;
