--- a/frontend/rrp/src/assets/css/book_page.css
+++ b/frontend/rrp/src/assets/css/book_page.css
@@ -82,10 +82,16 @@
 }
 
 .book-bar .right .rating-bar .star-bar span{
-	font-size: 15px;
+	font-size: 14px;
 	color: #333333;
 	margin-left: 0.625rem;
 	font-weight: 400;
+}
+
+.book-bar .right .rating-bar .star-bar b{
+	margin-right: 0.625rem;
+	color: orangered;
+	font-size: 1rem;
 }
 
 .book-bar .right .operation-bar{
