Frontend: Keep working on user collection page

--- a/frontend/rrp/src/assets/css/common.css
+++ b/frontend/rrp/src/assets/css/common.css
@@ -8,6 +8,10 @@ body {
 	font-family: -apple-system, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+a:link, a:visited {
+	text-decoration: none;
+	color: white;
+}
 
 body{
 	background-color: #444444;
