--- a/frontend/rrp/src/assets/css/common.css
+++ b/frontend/rrp/src/assets/css/common.css
@@ -58,6 +58,18 @@ header .left .title {
 	font-size: 1.25rem;
 	font-style: italic;
 	font-weight: bold;
+	text-shadow: 0px 0px 0px black;
+	transition: text-shadow,top,left 0.2s,0.2s,0.2s;
+	position: relative;
+	top: 0;
+	left: 0;
+}
+
+header .left .title:hover {
+	text-shadow: 3px 3px 10px black;
+	transition: text-shadow,top,left 0.2s,0.2s,0.2s;
+	top: -0.125rem;
+	left: -0.25rem;
 }
 
 
