--- a/frontend/rrp/src/assets/css/user_reviews.css
+++ b/frontend/rrp/src/assets/css/user_reviews.css
@@ -16,8 +16,9 @@
 }
 
 .user-dashboard .content .right .review-list ul li img{
-	width: 6rem;
+	width: 5rem;
 	margin-right: 1rem;
+	cursor: pointer;
 }
 
 .user-dashboard .content .right .review-list ul li .content{
@@ -39,6 +40,7 @@
 
 .user-dashboard .content .right .review-list ul li .content .title-operation .operation img{
 	width: 1.25rem;
+	cursor: pointer;
 }
 
 .user-dashboard .content .right .review-list ul li .content span{
@@ -51,19 +53,21 @@
 .user-dashboard .content .right .review-list ul li .content span:first-child{
 	font-weight: bold;
 	font-size: 1rem;
-	color: purple;
+	color: steelblue;
+	cursor: pointer;
 }
 
 .user-dashboard .content .right .review-list ul li .content .rating-bar{
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
-	margin-bottom: 0.5rem;
+	margin: 0.375rem 0;
 }
 
 .user-dashboard .content .right .review-list ul li .content .rating-bar span{
 	font-weight: bold;
 	color: palevioletred;
+	margin-top: -0.1875rem;
 }
 
 .user-dashboard .content .right .review-list ul li .content .rating-bar img{
