--- a/frontend/rrp/src/assets/css/search_result.css
+++ b/frontend/rrp/src/assets/css/search_result.css
@@ -5,6 +5,11 @@
 	justify-content: flex-start;
 }
 
+.search-results-list .no-result{
+	margin-top: 5rem;
+	font-size: 30px;
+}
+
 .search-results-list .search-title{
 	font-size: 1.25rem;
 	color: #333333;
