--- a/frontend/rrp/src/assets/css/search.css
+++ b/frontend/rrp/src/assets/css/search.css
@@ -95,18 +95,22 @@ background: linear-gradient(to top, #eaafc8, #654ea3); /* W3C, IE 10+/ Edge, Fir
 	align-items: center;
 	justify-content: center;
 	transition: border-color 0.3s;
-	margin: 0 2rem
+	margin: 0 2rem;
+	color: white;
+	transition: background-color 0.3s;
 }
 
 .search-mainpage .categories-list .popular-books ul li:hover {
 	transition: border-color 0.3s;
 	cursor: pointer;
+	background-color: mediumvioletred;
+	transition: background-color 0.3s;
 }
 
 .search-mainpage .categories-list .popular-books ul li img {
 	width: 6rem;
 	padding: 0.375rem;
-	margin-bottom: 1rem;
+	margin-bottom: 0.75rem;
 	background-color: white;
 }
 
@@ -114,7 +118,6 @@ background: linear-gradient(to top, #eaafc8, #654ea3); /* W3C, IE 10+/ Edge, Fir
 	font-size: 0.8125rem;
 	text-align: center;
 	margin-bottom: 0.125rem;
-	color: white;
 }
 
 .search-mainpage .categories-list .categories {
