Frontend: finished part of user-read-history page

--- a/frontend/rrp/src/assets/css/user_read_history.css
+++ b/frontend/rrp/src/assets/css/user_read_history.css
@@ -16,7 +16,7 @@
 	padding-left: 3rem;
 	padding-right: 0rem;
 	border-left: 4px coral dotted;
-	min-height: 8rem;
+	min-height: 11em;
 }
 
 .user-dashboard .content .right .already-read-list ul li .year-month{
