--- a/frontend/rrp/src/assets/css/book_page.css
+++ b/frontend/rrp/src/assets/css/book_page.css
@@ -134,8 +134,8 @@
 
 .content-bar .book_list{
 	display: flex;
-	justify-content: space-between;
-	align-items: auto;
+	justify-content: flex-start;
+	align-items: center;
 	padding: 0 2rem;
 }
 
@@ -144,6 +144,7 @@
 	flex-direction: column;
 	align-items: center;
 	padding: 0.625rem;
+	margin: 0 0.75rem;
 	border: 1px white solid;
 }
 
